# chat-bro

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/weekendware/chatbro/: ChatBroApp.kt  MainActivity.kt
app/src/main/java/com/weekendware/chatbro/core/: Constants.kt
app/src/main/java/com/weekendware/chatbro/data/common/: Result.kt
app/src/main/java/com/weekendware/chatbro/data/local/: Converters.kt
app/src/main/java/com/weekendware/chatbro/data/repository/: CheckInRepository.kt  (+3 more)
app/src/main/java/com/weekendware/chatbro/di/: AppModule.kt
app/src/main/java/com/weekendware/chatbro/ui/: CheckInScreen.kt  DashboardScreen.kt  JournalScreen.kt  MoodTrackerScreen.kt
app/src/main/java/com/weekendware/chatbro/util/: DateUtils.kt  Extensions.kt  MviViewModel.kt
app/src/main/java/com/weekendware/chatbro/viewmodel/: CheckInViewModel.kt  DashboardViewModel.kt  JournalViewModel.kt  MoodTrackerViewModel.kt
app/src/test/java/com/weekendware/chatbro/viewmodel/: JournalViewModelTest.kt  MoodTrackerViewModelTest.kt
auth-server/: Cargo.toml  auth.db-shm  schema.sql
auth-server/.sqlx/: query-fd58a5afa328dc89ac90264ccd72fd990d52375d7a5641703f3726ce4a0ae565.json
auth-server/migrations/: 20250523171848_create_users.sql
auth-server/src/: main.rs  state.rs
auth-server/src/models/: user.rs
auth-server/src/routes/: auth.rs  mod.rs  root.rs
auth-server/src/utils/: auth.rs
(+40 files in other folders)
