[package]
name = "auth-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
argon2 = "0.5"
jsonwebtoken = "9"
dotenv = "0.15"
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "2.0.12"
hyper = { version = "1.2", features = ["server", "http1", "http2"] }
tower = { version = "0.5.2", features = ["make"] }